style: setup tailwind configurations

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,125 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@custom-variant dark (&:where([data-theme="dark"], [data-theme="dark"] *));
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
+@layer theme {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    /* Default Dark Theme */
+    --background: 0 0% 5%;
+    --foreground: 0 0% 95%;
+    --foreground-secondary: 0 0% 60%;
+    --popover: 0 0% 24%;
+    --popover-foreground: 0 0% 98%;
+    --rating: 48 100% 40%;
+    --outline: 0 0% 20%;
+    --destructive: 0 90% 60%;
+  }
+
+  .light {
+    /* Light Section Overrides */
+    --background: 0 0% 95%;
+    --foreground: 0 0% 5%;
+    --foreground-secondary: 0 0% 40%;
+    --popover: 0 0% 76%;
+    --popover-foreground: 0 0% 2%;
+    --rating: 48 100% 60%;
+    --outline: 0 0% 80%;
+    --destructive: 0 90% 40%;
   }
 }
 
+/* Tailwind tokens */
+@theme {
+  --color-background: hsl(var(--background));
+  --color-foreground: hsl(var(--foreground));
+  --color-foreground-secondary: hsl(var(--foreground-secondary));
+
+  --color-primary: hsl(var(--primary));
+  --color-primary-foreground: hsl(var(--primary-foreground));
+
+  --color-popover: hsl(var(--popover));
+  --color-popover-foreground: hsl(var(--popover-foreground));
+
+  --color-rating: hsl(var(--rating));
+  --color-outline: hsl(var(--outline));
+  --color-destructive: hsl(var(--destructive));
+
+  --text-xs: 0.75rem;
+  --text-sm: 0.875rem;
+  --text-md: 1.5rem;
+  --text-lg: 2rem;
+  --text-xl: 3rem;
+  --text-2xl: 4rem;
+
+  --spacing-2xs: 4px;
+  --spacing-xs: 8px;
+  --spacing-sm: 16px;
+  --spacing-md: 24px;
+  --spacing-lg: 32px;
+  --spacing-xl: 48px;
+  --spacing-2xl: 64px;
+  --spacing-3xl: 80px;
+
+  --radius-md: 16px;
+  --radius: 8px;
+  --radius-xs: 4px;
+
+  --font-sans: "Neue Haas Grot";
+
+  --animate-accordion-down: accordion-down 0.2s ease-out;
+  --animate-accordion-up: accordion-up 0.2s ease-out;
+
+  --spacing-screen-minus-navbar: calc(100vh - 73px);
+
+  @keyframes accordion-down {
+    from {
+      height: 0;
+    }
+    to {
+      height: var(--radix-accordion-content-height);
+    }
+  }
+
+  @keyframes accordion-up {
+    from {
+      height: var(--radix-accordion-content-height);
+    }
+    to {
+      height: 0;
+    }
+  }
+}
+
+@font-face {
+  font-family: "Neue Haas Grot";
+  src: url("/fonts/neueHaasGrot/NeueHaasGrotDisp-45Light.otf")
+    format("opentype");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Neue Haas Grot";
+  src: url("/fonts/neueHaasGrot/NeueHaasGrotDisp-55Roman.otf")
+    format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Neue Haas Grot";
+  src: url("/fonts/neueHaasGrot/NeueHaasGrotDisp-65Medium.otf")
+    format("opentype");
+  font-weight: 600;
+  font-style: normal;
+}
+
+/* Global element styling */
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-sans), sans-serif;
+  font-size: var(--text-sm);
+}
+
+li {
+  list-style: none;
 }
